demo/grouper/directory-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.7.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: directory
  name: directory
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: directory
    spec:
      containers:
      - image: gcr.io/rcgrant-kromhout-test/grouper_directory
        name: directory
        ports:
        - containerPort: 389
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/dirsrv
          name: ldap
      restartPolicy: Always
      volumes:
      - name: ldap
        persistentVolumeClaim:
          claimName: ldap
status: {}
