demo/grouper/idp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.7.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: idp
  name: idp
spec:
  ports:
  - name: "443"
    port: 443
    targetPort: 443
  selector:
    io.kompose.service: idp
status:
  loadBalancer: {}
