demo/grouper/grouper-ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grouper-ui-ingress
spec:
  backend:
    serviceName: grouper-ui
    servicePort: 4443
